legger inn public html side med knapper og stokking og vise kortene visuelt

--- a/Desktop/AA/public/index.html
+++ b/Desktop/AA/public/index.html
@@ -4,12 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Demo</title>
+    <title>Card Deck</title>
     <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
-    <h1>Hello internett</h1>
+    <h1>Card Deck</h1>
+    <button id="createDeckBtn">Create Deck</button>
+    <button id="shuffleDeckBtn" disabled>Shuffle Deck</button>
+    <button id="drawCardBtn" disabled>Draw Card</button>
+    <div id="deckIdContainer"></div>
+    <div id="cardContainer"></div>
+    <script src="js/client.js"></script>
 </body>
 
 </html>
